--- a/css/login_css/login.css
+++ b/css/login_css/login.css
@@ -1,1 +1,15 @@
-/* No CSS *//*# sourceMappingURL=login.css.map */
+#firebaseui-auth-container {
+  margin-top: 50px;
+}
+
+body {
+  background: #0f3057;
+}
+
+#cont {
+  margin-top: 50px;
+  height: 250px;
+  background: url(/images/logo.png) no-repeat center center;
+  background-size: contain;
+}
+/*# sourceMappingURL=login.css.map */
